# resend-client-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
__tests__/: Cargo.toml
__tests__/src/: domains_tests.rs  emails_tests.rs  lib.rs
src/: domains.rs  emails.rs  lib.rs  reqlib.rs
