[package]
name = "resend-client-rs"
description = "Basic port of Resend client"
readme = "README.md"
documentation = "https://docs.rs/resend-client-rs"
repository = "https://github.com/LiamMartens/resend-client-rs"
license = "MIT"
authors = ["Liam Martens <hi@liammartens.com>"]
keywords = ["email", "resend", "sdk"]
categories = ["api-bindings", "email"]
version = "0.1.0"
edition = "2021"
include = [
  "Cargo.toml",
  "LICENSE",
  "src/**/*",
]

[dependencies]
url = "2.4.1"
const_format = "0.2.32"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
